<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Home.HomeFragment"
    android:clipToPadding="false"
    android:nestedScrollingEnabled="false"
    android:paddingBottom="80dp"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:elevation="1dp"
        android:src="@drawable/box_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="2dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/vedika_title"
            style="@style/body_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name_main"
            android:textColor="@color/white"
            android:textSize="22dp"
            android:elevation="5dp"
            android:layout_marginTop="20dp"
            android:visibility="visible"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/search_bar_include"
            layout="@layout/home_searchbar"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:weightSum="9"
                >

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/btn_legal_doc"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginStart="15dp"
                    android:gravity="center"

                    >

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/legal_documents"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/legal_ndocuments"
                        android:gravity="center"
                        android:textSize="12dp"
                        android:textColor="@color/black200"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/sfmedium"

                        />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/btn_legal_news"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:layout_weight="3"
                    >

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/legal_news"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/legal_nadvice"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:textSize="12dp"
                        android:textColor="@color/black200"
                        android:fontFamily="@font/sfmedium"

                        />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/btn_legal_consultation"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="15dp"

                    android:gravity="center"
                    android:layout_weight="3"
                    >

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/legal_consultation"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/legal_nconsultation"
                        android:gravity="center"
                        android:textSize="12dp"
                        android:textColor="@color/black200"
                        android:fontFamily="@font/sfmedium"

                        />

                </androidx.appcompat.widget.LinearLayoutCompat>




            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>

        <org.imaginativeworld.whynotimagecarousel.ImageCarousel
            android:id="@+id/carousel"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:infiniteCarousel="true"
            app:imageScaleType="fitXY"
            app:scaleOnScroll="true"
            app:autoPlay="true"
            app:autoWidthFixing="false"
            app:carouselGravity="START"
            app:carouselPadding="30dp"
            app:showBottomShadow="false"
            app:showTopShadow="false"
            app:showNavigationButtons="false"
            />


        <TextView
            android:id="@+id/kyr"
            style="@style/footnote_bo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="Know you rights"
            android:textColor="@color/account"
            android:textSize="16dp"
            android:paddingStart="20dp"
            android:elevation="5dp"
            android:layout_marginTop="20dp"
            android:visibility="visible"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.cardview.widget.CardView

            android:id="@+id/btn_labour_laws"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            app:cardElevation="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
          >

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:weightSum="10"
                    >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="9"
                        android:layout_height="wrap_content"
                        android:text="@string/labour_laws"
                        android:gravity="start"
                        android:textSize="16dp"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/black200"
                        android:fontFamily="@font/sfregular"

                        />

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:scaleX="1.2"
                        android:scaleY="1.2"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/laws_labour"
                        />

                </androidx.appcompat.widget.LinearLayoutCompat>

      </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView

            android:id="@+id/btn_property_laws"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            app:cardElevation="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:weightSum="10"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="9"
                    android:layout_height="wrap_content"
                    android:text="@string/property_laws"
                    android:gravity="start"
                    android:textSize="16dp"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/black200"
                    android:fontFamily="@font/sfregular"

                    />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:scaleX="1.2"
                    android:scaleY="1.2"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/property_laws"
                    />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView

            android:id="@+id/btn_civil_laws"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            app:cardElevation="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:weightSum="10"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="9"
                    android:layout_height="wrap_content"
                    android:text="@string/civil_laws"
                    android:gravity="start"
                    android:textSize="16dp"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/black200"
                    android:fontFamily="@font/sfregular"

                    />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:scaleX="1.2"
                    android:scaleY="1.2"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/civil_laws"
                    />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView

            android:id="@+id/btn_criminal_laws"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            app:cardElevation="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:weightSum="10"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="9"
                    android:layout_height="wrap_content"
                    android:text="@string/criminal_laws"
                    android:gravity="start"
                    android:textSize="16dp"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/black200"
                    android:fontFamily="@font/sfregular"

                    />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:scaleX="1.2"
                    android:scaleY="1.2"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/criminal_laws"
                    />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>


    </androidx.appcompat.widget.LinearLayoutCompat>

    </FrameLayout>

</ScrollView>

